--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@tailwindcss/typography": "^0.5.13",
     "gray-matter": "^4.0.3",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
