KTB-16 feat: action코드 업데이트

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,6 +1,10 @@
-name: Lint
+name: Lint Front Code
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   lint:
