[KTB-17] feat: 리뷰어가 없을 때 노티를 보내지 않도록 수정

--- a/.github/workflows/discord-noti.yml
+++ b/.github/workflows/discord-noti.yml
@@ -27,7 +27,7 @@ jobs:
           ${{ secrets.DISCORD_WEBHOOK_URL }}
 
       - name: Notify on PR ready for review with review requested
-        if: github.event.action == 'ready_for_review' && github.event.pull_request.requested_reviewers != ''
+        if: github.event.action == 'ready_for_review' && github.event.pull_request.requested_reviewers != null
         run: |
           ASSIGNEE=$(jq -r --arg assignee "${{ github.event.pull_request.assignee.login }}" '.[$assignee]' user-mapping.json)
           REQUESTED_REVIEWERS=$(echo '${{ toJson(github.event.pull_request.requested_reviewers) }}' | jq -r --argfile mapping user-mapping.json 'map(.login as $login | "<@"+($mapping[$login])+">") | join(", ")')
