[KTB-34] feat: PTA 키 업데이트 및 테스트

--- a/.github/workflows/sync-to-personal-repo.yml
+++ b/.github/workflows/sync-to-personal-repo.yml
@@ -3,7 +3,7 @@ name: Sync to Personal Repo
 on:
   push:
     branches:
-      - develop
+      - feature/KTB-34-test-PTA-secret-key-in-action
 
 jobs:
   sync:
