[KTB-34] feat: 원본 repo에서 develop에 머지시 trigger-sync 실행, 복제 repo에서 sync-develop 실행 되게 만들기

--- a/.github/workflows/trigger-sync.yml
+++ b/.github/workflows/trigger-sync.yml
@@ -3,7 +3,7 @@ name: Trigger Sync on Personal Repo
 on:
   push:
     branches:
-      - feature/KTB-34-test-PTA-secret-key-in-action
+      - develop
 
 jobs:
   trigger-sync:
