[KTB-34] feat: 추가 수정 완료

--- a/.github/workflows/trigger-sync.yml
+++ b/.github/workflows/trigger-sync.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   trigger-sync:
     runs-on: ubuntu-latest
+    if: github.repository == 'ktb6/ktb6-teamblog'
 
     steps:
       - name: Trigger sync workflow
