[KTB-16] feat: pr, issue 템플릿 default 설정 추가, auto_assign에서 assignees가 author로 나타나게 수정

--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -1,5 +1,5 @@
 # Configuration for the auto-assign action
 addReviewers: false
-addAssignees: true
+addAssignees: author
 reviewers: []
 assignees: []
